deployment/docker/victorialogs: updated examples, use vlagent and VL single in HA by default (#922)

--- a/deployment/docker/victorialogs/datadog-serverless/aws/compose.yml
+++ b/deployment/docker/victorialogs/datadog-serverless/aws/compose.yml
@@ -12,13 +12,15 @@ services:
       DD_LOGS_ENABLED: true
       DD_SOURCE: test
       DD_API_KEY: test
-      DD_DD_URL: http://dd-proxy:8427
+      DD_DD_URL: http://vmauth:8427
       DD_PROFILING_ENABLED: false
       DD_ENHANCED_METRICS: true
-      DD_LOGS_CONFIG_LOGS_DD_URL: http://dd-proxy:8427
+      DD_LOGS_CONFIG_LOGS_DD_URL: http://vmauth:8427
       DD_SERVERLESS_FLUSH_STRATEGY: periodically,100
     depends_on:
-      victorialogs:
+      vmauth:
+        condition: service_healthy
+      vlagent:
         condition: service_healthy
       victoriametrics:
         condition: service_healthy
