--- a/deployment/docker/victorialogs/fluentbit/otlp/fluent-bit.conf
+++ b/deployment/docker/victorialogs/fluentbit/otlp/fluent-bit.conf
@@ -25,9 +25,9 @@
 [OUTPUT]
     name        opentelemetry
     match       *
-    host        nginx
+    host        vmauth
     logs_uri    /insert/opentelemetry/v1/logs
     metrics_uri /opentelemetry/api/v1/push
-    port        80
+    port        8427
     header      VL-Msg-Field log
     header      VL-Stream-Fields severity
