--- a/deployment/docker/victorialogs/fluentd/jsonline/fluent.conf
+++ b/deployment/docker/victorialogs/fluentd/jsonline/fluent.conf
@@ -6,6 +6,6 @@
 
 <match **>
   @type http
-  endpoint "http://victorialogs:9428/insert/jsonline"
+  endpoint "http://vlagent:9429/insert/jsonline"
   headers {"VL-Msg-Field": "log", "VL-Stream-Fields": "com.docker.compose.service"}
 </match>
