--- a/deployment/docker/victorialogs/fluentd/loki/fluent.conf
+++ b/deployment/docker/victorialogs/fluentd/loki/fluent.conf
@@ -14,7 +14,7 @@
 
 <match **>
   @type loki
-  url "http://victorialogs:9428/insert"
+  url "http://vlagent:9429/insert"
   <buffer>
     flush_interval 10s
     flush_at_shutdown true
