--- a/deployment/docker/victorialogs/logstash/elasticsearch/pipeline.conf
+++ b/deployment/docker/victorialogs/logstash/elasticsearch/pipeline.conf
@@ -6,7 +6,7 @@ input {
 
 output {
   elasticsearch {
-    hosts => ["http://victorialogs:9428/insert/elasticsearch"]
+    hosts => ["http://vlagent:9429/insert/elasticsearch"]
     custom_headers => {
         "AccountID" => "0"
         "ProjectID" => "0"
