--- a/deployment/docker/victorialogs/logstash/loki/pipeline.conf
+++ b/deployment/docker/victorialogs/logstash/loki/pipeline.conf
@@ -6,6 +6,6 @@ input {
 
 output {
   loki {
-     url => "http://victorialogs:9428/insert/loki/api/v1/push?_stream_fields=host.ip,process.name&_msg_field=message&_time_field=@timestamp"
+     url => "http://vlagent:9429/insert/loki/api/v1/push?_stream_fields=host.ip,process.name&_msg_field=message&_time_field=@timestamp"
   }
 }
