--- a/deployment/docker/victorialogs/opentelemetry-collector/compose-base.yml
+++ b/deployment/docker/victorialogs/opentelemetry-collector/compose-base.yml
@@ -9,7 +9,9 @@ services:
       - ${PWD}/config.yml:/etc/otelcol-contrib/config.yaml
       - /var/lib/docker/containers:/var/lib/docker/containers
     depends_on:
-      victorialogs:
+      vmauth:
+        condition: service_healthy
+      vlagent:
         condition: service_healthy
       victoriametrics:
         condition: service_healthy
