--- a/deployment/docker/victorialogs/telegraf/elasticsearch/telegraf.conf
+++ b/deployment/docker/victorialogs/telegraf/elasticsearch/telegraf.conf
@@ -17,7 +17,7 @@
 [[inputs.cpu]]
 
 [[outputs.elasticsearch]]
-  urls = ["http://victorialogs:9428/insert/elasticsearch"]
+  urls = ["http://vlagent:9429/insert/elasticsearch"]
   timeout = "1m"
   flush_interval = "30s"
   enable_sniffer = false
