--- a/deployment/docker/victorialogs/telegraf/loki/telegraf.conf
+++ b/deployment/docker/victorialogs/telegraf/loki/telegraf.conf
@@ -17,7 +17,7 @@
 [[inputs.cpu]]
 
 [[outputs.loki]]
-  domain = "http://victorialogs:9428"
+  domain = "http://vlagent:9429"
   endpoint = "/insert/loki/api/v1/push?_msg_field=docker_log.msg&_time_field=@timestamp&_stream_fields=log_source,metric_type"
   namepass = ["docker_log"]
   gzip_request = true
