--- a/deployment/docker/victorialogs/telegraf/syslog/telegraf.conf
+++ b/deployment/docker/victorialogs/telegraf/syslog/telegraf.conf
@@ -17,7 +17,7 @@
 [[inputs.cpu]]
 
 [[outputs.syslog]]
-  address = "tcp://victorialogs:8094"
+  address = "tcp://vlagent:8094"
   namepass = ["docker_log"]
 
 [[outputs.http]]
