--- a/deployment/docker/victorialogs/datadog-agent/compose-base.yml
+++ b/deployment/docker/victorialogs/datadog-agent/compose-base.yml
@@ -2,7 +2,7 @@ include:
  - ../compose-base.yml
 services:
   agent:
-    image: docker.io/datadog/agent:7.57.2
+    image: docker.io/datadog/agent:7
     restart: on-failure
     volumes:
       - /var/lib/docker/containers:/var/lib/docker/containers
@@ -11,8 +11,8 @@ services:
       - /sys/fs/cgroup/:/host/sys/fs/cgroup:ro
     environment:
       DD_API_KEY: test
-      DD_URL: http://dd-proxy:8427
-      DD_LOGS_CONFIG_LOGS_DD_URL: http://dd-proxy:8427
+      DD_URL: http://vmauth:8427
+      DD_LOGS_CONFIG_LOGS_DD_URL: http://vmauth:8427
       DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL: true
       DD_LOGS_ENABLED: true
       DD_LOGS_CONFIG_USE_HTTP: true
@@ -20,7 +20,9 @@ services:
       DD_PROCESS_CONFIG_CONTAINER_COLLECTION_ENABLED: false
       DD_PROCESS_CONFIG_PROCESS_DISCOVERY_ENABLED: false
     depends_on:
-      victorialogs:
+      vmauth:
+        condition: service_healthy
+      vlagent:
         condition: service_healthy
       victoriametrics:
         condition: service_healthy
