--- a/deployment/docker/victorialogs/filebeat/elasticsearch/filebeat.yml
+++ b/deployment/docker/victorialogs/filebeat/elasticsearch/filebeat.yml
@@ -7,7 +7,7 @@ processors:
   - add_docker_metadata: ~
 
 output.elasticsearch:
-  hosts: [ "http://victorialogs:9428/insert/elasticsearch/" ]
+  hosts: ["http://vlagent:9429/insert/elasticsearch/"]
   worker: 5
   parameters:
     _msg_field: "message"
