--- a/deployment/docker/victorialogs/filebeat/syslog/filebeat.yml
+++ b/deployment/docker/victorialogs/filebeat/syslog/filebeat.yml
@@ -5,7 +5,7 @@ filebeat.inputs:
       host: "0.0.0.0:5140"
 
 output.elasticsearch:
-  hosts: [ "http://victorialogs:9428/insert/elasticsearch/" ]
+  hosts: ["http://vlagent:9429/insert/elasticsearch/"]
   worker: 5
   bulk_max_size: 1000
   parameters:
