--- a/deployment/docker/victorialogs/logstash/jsonline/pipeline.conf
+++ b/deployment/docker/victorialogs/logstash/jsonline/pipeline.conf
@@ -6,7 +6,7 @@ input {
 
 output {
   http {
-    url => "http://victorialogs:9428/insert/jsonline?_stream_fields=host.ip,process.name&_msg_field=message&_time_field=@timestamp"
+    url => "http://vlagent:9429/insert/jsonline?_stream_fields=host.ip,process.name&_msg_field=message&_time_field=@timestamp"
     format => "json"
     http_method => "post"
   }
