--- a/deployment/docker/victorialogs/telegraf/jsonline/telegraf.conf
+++ b/deployment/docker/victorialogs/telegraf/jsonline/telegraf.conf
@@ -17,7 +17,7 @@
 [[inputs.cpu]]
 
 [[outputs.http]]
-  url = "http://victorialogs:9428/insert/jsonline?_msg_field=fields.msg&_stream_fields=tags.log_source,tags.metric_type"
+  url = "http://vlagent:9429/insert/jsonline?_msg_field=fields.msg&_stream_fields=tags.log_source,tags.metric_type"
   data_format = "json"
   namepass = ["docker_log"]
   use_batch_format = false
