--- a/deployment/docker/victorialogs/vector/elasticsearch/vector.yml
+++ b/deployment/docker/victorialogs/vector/elasticsearch/vector.yml
@@ -16,7 +16,7 @@ sinks:
   elasticsearch:
     type: elasticsearch
     inputs: [parser]
-    endpoints: [http://victorialogs:9428/insert/elasticsearch/]
+    endpoints: [http://vlagent:9429/insert/elasticsearch/]
     mode: bulk
     api_version: v8
     compression: gzip
