--- a/deployment/docker/victorialogs/vector/loki/vector.yml
+++ b/deployment/docker/victorialogs/vector/loki/vector.yml
@@ -30,7 +30,7 @@ sinks:
     type: loki
     inputs:
       - parser
-    endpoint: http://victorialogs:9428/insert/loki/
+    endpoint: http://vlagent:9429/insert/loki/
     compression: gzip
     path: /api/v1/push?_msg_field=message.msg&_time_field=timestamp&_stream_fields=com_docker_compose_service
     labels:
