--- a/deployment/docker/victorialogs/vmauth.yml
+++ b/deployment/docker/victorialogs/vmauth.yml
@@ -1,15 +1,32 @@
 unauthorized_user:
   url_map:
     - src_paths:
-        - "/api/v2/logs"
-        - "/api/v1/validate"
-      url_prefix: "http://victorialogs:9428/insert/datadog/"
+        - /api/v2/logs
+        - /api/v1/validate
+      url_prefix: http://vlagent:9429/insert/datadog/
     - src_paths:
-        - "/api/v1/series"
-        - "/api/v2/series"
-        - "/api/beta/sketches"
-        - "/api/v1/validate"
-        - "/api/v1/check_run"
-        - "/intake"
-        - "/api/v1/metadata"
-      url_prefix: "http://victoriametrics:8428/datadog/"
+        - /insert/.*
+      url_prefix: http://vlagent:9429/
+    - src_paths:
+        - /opentelemetry/.*
+      url_prefix: http://victoriametrics:8428/
+    - src_paths:
+        - /api/v1/series
+        - /api/v2/series
+        - /api/beta/sketches
+        - /api/v1/validate
+        - /api/v1/check_run
+        - /intake
+        - /api/v1/metadata
+      url_prefix: http://victoriametrics:8428/datadog/
+    - src_paths:
+        - /logs/.*
+      drop_src_path_prefix_parts: 1
+      url_prefix:
+        - http://victorialogs-1:9428/
+        - http://victorialogs-2:9428/
+    - src_paths:
+        - /metrics/.*
+      drop_src_path_prefix_parts: 1
+      url_prefix: http://victoriametrics:8428/
+    
