app/vmui/Makefile: move the dependency on vmui-package-base-image rule to vmui-run-npm-command rule, since it depends on the vmui-package-base-image
This is a follow-up for the commit 761af9866bde8f16ffa0d549de040e9ad233a855

Updates https://github.com/VictoriaMetrics/VictoriaLogs/pull/461

--- a/app/vmui/Makefile
+++ b/app/vmui/Makefile
@@ -1,6 +1,6 @@
 # All these commands must run from repository root.
 
-vmui-run-npm-command:
+vmui-run-npm-command: vmui-package-base-image
 	docker run --rm \
 		--user $(shell id -u):$(shell id -g) \
 		--mount type=bind,src="$(shell pwd)/app/vmui",dst=/build \
@@ -15,7 +15,7 @@ vmui-package-base-image:
 vmui-gen-logsql-pipes:
 	NPM_COMMAND="npm run gen:logsql-pipes" $(MAKE) vmui-run-npm-command
 
-vmui-build: vmui-package-base-image
+vmui-build:
 	$(MAKE) vmui-gen-logsql-pipes
 	NPM_COMMAND="npm run build" $(MAKE) vmui-run-npm-command
 
