ci: scope Go artifact cache restore fallback by Go version (#1096)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
             ~/go/bin
             ~/go/pkg/mod
           key: go-artifacts-${{ runner.os }}-crossbuild-${{ steps.go.outputs.go-version }}-${{ hashFiles('go.sum', 'Makefile', 'app/**/Makefile') }}
-          restore-keys: go-artifacts-${{ runner.os }}-crossbuild-
+          restore-keys: go-artifacts-${{ runner.os }}-crossbuild-${{ steps.go.outputs.go-version }}-
 
       - name: Run crossbuild
         run: make crossbuild
